--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,6 +47,9 @@ SteamDevAppId=934270
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/Engine.StreamingSettings]
+s.AsyncLoadingThreadEnabled=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
