Add Mechanical Games loading movie

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,4 +10,6 @@ ProjectID=B2E91A114F113684C53CED93C02C4577
 bWaitForMoviesToComplete=True
 bMoviesAreSkippable=False
 +StartupMovies=UE4_Moving_Logo_4K_60
++StartupMovies=MechanicalGames_Moving_Logo_4K_60
+
 
